devops/kubernetes/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrbrain-ingress
  namespace: hrbrain
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: hrbrain.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hrbrain-frontend
                port:
                  number: 80
    - host: api.hrbrain.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hrbrain-backend
                port:
                  number: 3000
